--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -18,8 +18,8 @@ GCC_0902_PATCHES	:= $(DIR_DADAO)/DADAO-tch/gcc-0902-patches
 GCC_0902_SOURCE		:= $(DIR_DADAO_SOURCE)/gcc-0902
 GCC_0902_BUILD		:= $(DIR_DADAO_BUILD)/gcc-0902
 GCC_0902_INSTALL	?= $(DIR_DADAO_BUILD)/__gcc-0902
-GCC_0902_LOG_STDOUT	:= $(DIR_DADAO)/_log-stdout-gcc-0902
-GCC_0902_LOG_STDERR	:= $(DIR_DADAO)/_log-stderr-gcc-0902
+GCC_0902_LOG_STDOUT	:= $(DIR_DADAO)/_log-gcc-0902.out
+GCC_0902_LOG_STDERR	:= $(DIR_DADAO)/_log-gcc-0902.err
 
 gcc-0902-clean:
 	@echo "Remove old gcc source dir ..."
@@ -96,8 +96,8 @@ BINUTILS_GDB_0233_PATCHES		:= $(DIR_DADAO)/DADAO-tch/binutils-gdb-0233-patches
 BINUTILS_GDB_0233_SOURCE		:= $(DIR_DADAO_SOURCE)/binutils-gdb-0233
 BINUTILS_GDB_0233_BUILD			:= $(DIR_DADAO_BUILD)/binutils-gdb-0233
 BINUTILS_GDB_0233_INSTALL		?= $(DIR_DADAO_BUILD)/__binutils-gdb-0233
-BINUTILS_GDB_0233_LOG_STDOUT		:= $(DIR_DADAO)/_log-stdout-binutils-gdb-0233
-BINUTILS_GDB_0233_LOG_STDERR		:= $(DIR_DADAO)/_log-stderr-binutils-gdb-0233
+BINUTILS_GDB_0233_LOG_STDOUT		:= $(DIR_DADAO)/_log-binutils-gdb-0233.out
+BINUTILS_GDB_0233_LOG_STDERR		:= $(DIR_DADAO)/_log-binutils-gdb-0233.err
 
 binutils-gdb-0233-clean:
 	@echo "Remove old binutils-gdb source dir ..."
