--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -230,3 +230,10 @@ binutils-gdb-0233-highfive:
 
 binutils-gdb-0233-check:
 	@make -C $(BINUTILS_GDB_0233_BUILD) check-gas
+
+binutils-gdb-0233-TAGS:
+	@make -C $(BINUTILS_GDB_0233_BUILD) TAGS
+	@etags -f $(BINUTILS_GDB_0233_SOURCE)/include/TAGS --recurse $(BINUTILS_GDB_0233_SOURCE)/include
+	@etags -f $(BINUTILS_GDB_0233_SOURCE)/TAGS --etags-include=$(BINUTILS_GDB_0233_SOURCE)/include/TAGS
+	@find $(BINUTILS_GDB_0233_BUILD) -name TAGS -exec		\
+		etags -f $(BINUTILS_GDB_0233_SOURCE)/TAGS --append --etags-include='{}' \;
