--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -7,233 +7,5 @@ tch-highfive:
 	@GCC_0902_INSTALL=$(DIR_DADAO_INSTALL) make -s gcc-0902-highfive
 	@echo "=== BUILD Toolchain DONE! ==="
 
-GCC_0902_ORIGIN		:= $(DIR_GIT_TAO)/gcc.git
-GCC_0902_VERSION	:= gcc-9_2_0-release
-GCC_0902_BRANCH		:= dadao-0902
-GCC_0902_TARGET		:= dadao-linux-elf
-
-GCC_0902_NEWFILES	:= $(DIR_DADAO)/DADAO-tch/gcc-0902-newfiles
-GCC_0902_PATCHES	:= $(DIR_DADAO)/DADAO-tch/gcc-0902-patches
-
-GCC_0902_SOURCE		:= $(DIR_DADAO_SOURCE)/gcc-0902
-GCC_0902_BUILD		:= $(DIR_DADAO_BUILD)/gcc-0902
-GCC_0902_INSTALL	?= $(DIR_DADAO_BUILD)/__gcc-0902
-GCC_0902_LOG_STDOUT	:= $(DIR_DADAO)/_log-gcc-0902.out
-GCC_0902_LOG_STDERR	:= $(DIR_DADAO)/_log-gcc-0902.err
-
-gcc-0902-clean:
-	@echo "Remove old gcc source dir ..."
-	@rm -fr $(GCC_0902_SOURCE)
-	@echo "Remove old gcc build dir ..."
-	@rm -fr $(GCC_0902_BUILD)
-ifneq ($(GCC_0902_INSTALL), $(DIR_DADAO_INSTALL))
-	@echo "Remove old gcc install dir ..."
-	@rm -fr $(GCC_0902_INSTALL)
-endif
-
-gcc-0902-new-source:
-	@test -d $(DIR_DADAO_SOURCE) || mkdir -p $(DIR_DADAO_SOURCE)
-	@rm -fr $(GCC_0902_SOURCE)
-	@echo "Clone official repo"
-	@git clone $(GCC_0902_ORIGIN) -- $(GCC_0902_SOURCE)
-	@cd $(GCC_0902_SOURCE); git checkout -b $(GCC_0902_BRANCH) $(GCC_0902_VERSION)
-	@echo "Copy gcc/config/dadao dir"
-	@cp -a $(GCC_0902_NEWFILES)/gcc/config/* $(GCC_0902_SOURCE)/gcc/config/
-	@cd $(GCC_0902_SOURCE);						\
-		git add gcc/config/dadao;				\
-		git commit -sm"DADAO: add gcc/config/dadao dir"
-	@echo "Apply gcc-0902-patches ..."
-	@cd $(GCC_0902_SOURCE); git am $(GCC_0902_PATCHES)/*.patch
-
-gcc-0902-new-build:
-	@rm -fr $(GCC_0902_BUILD)
-	@mkdir -p $(GCC_0902_BUILD)
-	@cd $(GCC_0902_BUILD) &&					\
-		$(GCC_0902_SOURCE)/configure				\
-			--target=$(GCC_0902_TARGET)			\
-			--srcdir=$(GCC_0902_SOURCE)			\
-			--prefix=$(GCC_0902_INSTALL)			\
-			--disable-nls					\
-			--enable-languages=c				\
-			--enable-checking				\
-			--enable-werror					\
-			--without-headers
-
-gcc-0902-build:
-	@make -C $(GCC_0902_BUILD) all-gcc -j8
-
-gcc-0902-install:
-	@make -C $(GCC_0902_BUILD) install-gcc
-
-gcc-0902-highfive:
-	@echo "BEGIN TO BUILD gcc-0902!"
-	@echo "0. Remove old gcc logfiles"
-	@rm -fr $(GCC_0902_LOG_STDOUT) $(GCC_0902_LOG_STDERR)
-	@echo "1. Clean old gcc ..."
-	@make -s gcc-0902-clean				1>> $(GCC_0902_LOG_STDOUT) 2>> $(GCC_0902_LOG_STDERR)
-	@echo "2. Clone and patch new gcc ..."
-	@make -s gcc-0902-new-source			1>> $(GCC_0902_LOG_STDOUT) 2>> $(GCC_0902_LOG_STDERR)
-	@echo "2. Clone and patch new gcc complete."
-	@echo "3. Configure gcc ..."
-	@make -s gcc-0902-new-build			1>> $(GCC_0902_LOG_STDOUT) 2>> $(GCC_0902_LOG_STDERR)
-	@echo "3. Configure gcc complete."
-	@echo "4. Make all-gcc ..."
-	@make -s gcc-0902-build				1>> $(GCC_0902_LOG_STDOUT) 2>> $(GCC_0902_LOG_STDERR)
-	@echo "4. Make all-gcc complete."
-	@echo "5. Install gcc ..."
-	@make -s gcc-0902-install			1>> $(GCC_0902_LOG_STDOUT) 2>> $(GCC_0902_LOG_STDERR)
-	@echo "5. Install gcc complete."
-	@echo "BUILD gcc-0902 DONE!"
-
-BINUTILS_GDB_0233_ORIGIN		:= $(DIR_GIT_TAO)/binutils-gdb.git
-BINUTILS_GDB_0233_VERSION		:= binutils-2_33_1
-BINUTILS_GDB_0233_BRANCH		:= dadao-0233
-BINUTILS_GDB_0233_TARGET		:= dadao-linux-elf
-
-BINUTILS_GDB_0233_NEWFILES		:= $(DIR_DADAO)/DADAO-tch/binutils-gdb-0233-newfiles
-BINUTILS_GDB_0233_PATCHES		:= $(DIR_DADAO)/DADAO-tch/binutils-gdb-0233-patches
-
-BINUTILS_GDB_0233_SOURCE		:= $(DIR_DADAO_SOURCE)/binutils-gdb-0233
-BINUTILS_GDB_0233_BUILD			:= $(DIR_DADAO_BUILD)/binutils-gdb-0233
-BINUTILS_GDB_0233_INSTALL		?= $(DIR_DADAO_BUILD)/__binutils-gdb-0233
-BINUTILS_GDB_0233_LOG_STDOUT		:= $(DIR_DADAO)/_log-binutils-gdb-0233.out
-BINUTILS_GDB_0233_LOG_STDERR		:= $(DIR_DADAO)/_log-binutils-gdb-0233.err
-
-binutils-gdb-0233-clean:
-	@echo "Remove old binutils-gdb source dir ..."
-	@rm -fr $(BINUTILS_GDB_0233_SOURCE)
-	@echo "Remove old binutils-gdb build dir ..."
-	@rm -fr $(BINUTILS_GDB_0233_BUILD)
-ifneq ($(BINUTILS_GDB_0233_INSTALL), $(DIR_DADAO_INSTALL))
-	@echo "Remove old binutils-gdb install dir ..."
-	@rm -fr $(BINUTILS_GDB_0233_INSTALL)
-endif
-
-binutils-gdb-0233-new-source:
-	@test -d $(DIR_DADAO_SOURCE) || mkdir -p $(DIR_DADAO_SOURCE)
-	@rm -fr $(BINUTILS_GDB_0233_SOURCE)
-	@echo "Clone official repo"
-	@git clone $(BINUTILS_GDB_0233_ORIGIN) -- $(BINUTILS_GDB_0233_SOURCE)
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		git checkout -b $(BINUTILS_GDB_0233_BRANCH) $(BINUTILS_GDB_0233_VERSION)
-	@echo "INCLUDE: Copy include dir"
-	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/include/* $(BINUTILS_GDB_0233_SOURCE)/include
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		git add include;					\
-		git commit -sm"DADAO-include: add header files"
-	@echo "INCLUDE: Apply include related patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/0*.patch
-	@echo "BFD: Copy bfd dir"
-	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/bfd/* $(BINUTILS_GDB_0233_SOURCE)/bfd
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		git add bfd;						\
-		git commit -sm"DADAO-bfd: add dadao support"
-	@echo "BFD: Apply bfd related patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/1*.patch
-	@echo "BFD: re-generate configure and Makefile.in"
-	@cd $(BINUTILS_GDB_0233_SOURCE)/bfd;				\
-		autoreconf;						\
-		git add .;						\
-		git commit -sm"DADAO-bfd: re-generate configure and Makefile.in"
-	@echo "BFD: re-generate bfd-in2.h and libbfd.h"
-	@cd $(BINUTILS_GDB_0233_SOURCE)/bfd;				\
-		./configure;						\
-		make headers;						\
-		make distclean;						\
-		git add .;						\
-		git commit -sm"DADAO-bfd: re-generate bfd-in2.h and libbfd.h"
-	@echo "GAS: Copy gas/config dir"
-	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/gas/config/* $(BINUTILS_GDB_0233_SOURCE)/gas/config/
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		git add gas/config;					\
-		git commit -sm"DADAO-gas: add dadao config support"
-	@echo "GAS: Copy gas/testsuite dir"
-	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/gas/testsuite/* $(BINUTILS_GDB_0233_SOURCE)/gas/testsuite/
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		git add gas/testsuite;					\
-		git commit -sm"DADAO-gas: add dadao testsuite support"
-	@echo "GAS: Apply gas related patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/2*.patch
-	@echo "GAS: re-generate configure and Makefile.in"
-	@cd $(BINUTILS_GDB_0233_SOURCE)/gas;				\
-		autoreconf;						\
-		git add .;						\
-		git commit -sm"DADAO-gas: re-generate configure and Makefile.in"
-	@echo "LD: Copy ld dir"
-	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/ld/* $(BINUTILS_GDB_0233_SOURCE)/ld/
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		git add ld;						\
-		git commit -sm"DADAO-ld: add dadao support"
-	@echo "LD: Apply ld related patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/3*.patch
-	@echo "LD: re-generate configure and Makefile.in"
-	@cd $(BINUTILS_GDB_0233_SOURCE)/ld;				\
-		autoreconf;						\
-		git add .;						\
-		git commit -sm"DADAO-ld: re-generate configure and Makefile.in"
-	@echo "OPCODES: Copy opcodes dir"
-	@cp -a $(BINUTILS_GDB_0233_NEWFILES)/opcodes/* $(BINUTILS_GDB_0233_SOURCE)/opcodes/
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		git add opcodes;					\
-		git commit -sm"DADAO-opcodes: add dadao support"
-	@echo "OPCODES: Apply opcodes related patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/4*.patch
-	@echo "OPCODES: re-generate configure and Makefile.in"
-	@cd $(BINUTILS_GDB_0233_SOURCE)/opcodes;			\
-		autoreconf;						\
-		git add .;						\
-		git commit -sm"DADAO-opcodes: re-generate configure and Makefile.in"
-	@echo "BINUTILS: Apply binutils related patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/8*.patch
-	@echo "CONFIG: Apply config related patches ..."
-	@cd $(BINUTILS_GDB_0233_SOURCE); git am $(BINUTILS_GDB_0233_PATCHES)/9*.patch
-	@echo "CONFIG: re-generate configure and Makefile.in in root dir"
-	@cd $(BINUTILS_GDB_0233_SOURCE);				\
-		autoreconf;						\
-		git add .;						\
-		git commit -sm"DADAO: re-generate root configure"
-
-binutils-gdb-0233-new-build:
-	@rm -fr $(BINUTILS_GDB_0233_BUILD)
-	@mkdir -p $(BINUTILS_GDB_0233_BUILD)
-	@cd $(BINUTILS_GDB_0233_BUILD) &&				\
-		$(BINUTILS_GDB_0233_SOURCE)/configure			\
-			--target=$(BINUTILS_GDB_0233_TARGET)		\
-			--srcdir=$(BINUTILS_GDB_0233_SOURCE)		\
-			--prefix=$(BINUTILS_GDB_0233_INSTALL)
-
-binutils-gdb-0233-build:
-	@make -C $(BINUTILS_GDB_0233_BUILD) -j8
-
-binutils-gdb-0233-install:
-	@make -C $(BINUTILS_GDB_0233_BUILD) install
-
-binutils-gdb-0233-highfive:
-	@echo "BEGIN TO BUILD binutils-gdb-0233!"
-	@echo "0. Remove old binutils logfiles"
-	@rm -fr $(BINUTILS_GDB_0233_LOG_STDOUT) $(BINUTILS_GDB_0233_LOG_STDERR)
-	@echo "1. Clean old binutils-gdb ..."
-	@make -s binutils-gdb-0233-clean			1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
-	@echo "2. Clone and patch new binutils-gdb ..."
-	@make -s binutils-gdb-0233-new-source			1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
-	@echo "2. Clone and patch new binutils-gdb complete."
-	@echo "3. Configure binutils-gdb ..."
-	@make -s binutils-gdb-0233-new-build			1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
-	@echo "3. Configure binutils-gdb complete."
-	@echo "4. Make binutils-gdb ..."
-	@make -s binutils-gdb-0233-build			1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
-	@echo "4. Make binutils-gdb complete."
-	@echo "5. Install binutils-gdb ..."
-	@make -s binutils-gdb-0233-install			1>> $(BINUTILS_GDB_0233_LOG_STDOUT) 2>> $(BINUTILS_GDB_0233_LOG_STDERR)
-	@echo "5. Install binutils-gdb complete."
-	@echo "BUILD binutils-gdb-0233 DONE!"
-
-binutils-gdb-0233-check:
-	@make -C $(BINUTILS_GDB_0233_BUILD) check-gas
-
-binutils-gdb-0233-TAGS:
-	@make -C $(BINUTILS_GDB_0233_BUILD) TAGS
-	@etags -f $(BINUTILS_GDB_0233_SOURCE)/include/TAGS --recurse $(BINUTILS_GDB_0233_SOURCE)/include
-	@etags -f $(BINUTILS_GDB_0233_SOURCE)/TAGS --etags-include=$(BINUTILS_GDB_0233_SOURCE)/include/TAGS
-	@find $(BINUTILS_GDB_0233_BUILD) -name TAGS -exec		\
-		etags -f $(BINUTILS_GDB_0233_SOURCE)/TAGS --append --etags-include='{}' \;
+include DADAO-tch/Makefile.binutils-gdb
+include DADAO-tch/Makefile.gcc
