--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -8,4 +8,4 @@ tch-highfive:
 	@echo "=== BUILD Toolchain DONE! ==="
 
 include DADAO-tch/Makefile.binutils-gdb
-include DADAO-tch/Makefile.gcc
+include DADAO-tch/Makefile.gcc-0902
