--- a/DADAO-tch/Makefile.gcc-0903
+++ b/DADAO-tch/Makefile.gcc-0903
@@ -31,13 +31,18 @@ gcc-0903-source:
 	@echo "Clone official repo"
 	@git clone $(GCC_0903_ORIGIN) -- $(GCC_0903_SOURCE)
 	@cd $(GCC_0903_SOURCE); git checkout -b $(GCC_0903_BRANCH) $(GCC_0903_VERSION)
-	@echo "Copy gcc/config/dadao dir"
+	@echo "GCC-CONFIG: Copy gcc/config/dadao dir"
 	@cp -a $(GCC_0903_NEWFILES)/gcc/config/* $(GCC_0903_SOURCE)/gcc/config/
 	@cd $(GCC_0903_SOURCE);						\
 		git add gcc/config/dadao;				\
-		git commit -sm"DADAO: add gcc/config/dadao dir"
-	@echo "Apply gcc-0903-patches ..."
-	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_PATCHES)/*.patch
+		git commit -sm"DADAO-gcc-config: add dadao support"
+	@echo "CONFIG: Apply config related patches ..."
+	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_PATCHES)/9*.patch
+	@echo "CONFIG: re-generate configure and Makefile.in in root dir"
+	@cd $(GCC_0903_SOURCE);						\
+		autoreconf;						\
+		git add .;						\
+		git commit -sm"DADAO: re-generate root configure"
 
 gcc-0903-build-new:
 	@rm -fr $(GCC_0903_BUILD)
