--- a/DADAO-tch/Makefile.gcc-0903
+++ b/DADAO-tch/Makefile.gcc-0903
@@ -36,6 +36,13 @@ gcc-0903-source:
 	@cd $(GCC_0903_SOURCE);						\
 		git add gcc/config/dadao;				\
 		git commit -sm"DADAO-gcc-config: add dadao support"
+	@echo "GCC-COMMON: Copy gcc/common/config/dadao dir"
+	@cp -a $(GCC_0903_NEWFILES)/gcc/common/config/* $(GCC_0903_SOURCE)/gcc/common/config/
+	@cd $(GCC_0903_SOURCE);						\
+		git add gcc/common/config/dadao;			\
+		git commit -sm"DADAO-gcc-common-config: add dadao support"
+	@echo "GCC-CONFIG: Apply gcc-config related patches ..."
+	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_PATCHES)/1*.patch
 	@echo "CONFIG: Apply config related patches ..."
 	@cd $(GCC_0903_SOURCE); git am $(GCC_0903_PATCHES)/9*.patch
 	@echo "CONFIG: re-generate configure and Makefile.in in root dir"
