--- a/DADAO-tch/Makefile.gcc-0903
+++ b/DADAO-tch/Makefile.gcc-0903
@@ -92,4 +92,6 @@ gcc-0903-highfive:
 	@echo "BUILD gcc-0903 DONE!"
 
 gcc-0903-check:
+	@echo "MUST build/install binutils/gcc in the same dir (use tch-highfive)"
 	@make -C $(GCC_0903_BUILD) check-gcc-c		1>> $(GCC_0903_LOG_STDOUT) 2>> $(GCC_0903_LOG_STDERR)
+	@ln --symbolic -t $(GCC_0903_BUILD) $(GCC_0903_BUILD)/gcc/testsuite/gcc/gcc.sum
