Makefile: add newlib support
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tch/Makefile.DADAO-tch
+++ b/DADAO-tch/Makefile.DADAO-tch
@@ -9,4 +9,5 @@ tch-highfive:
 
 include DADAO-tch/Makefile.binutils-gdb
 include DADAO-tch/Makefile.gcc-0903
+include DADAO-tch/Makefile.newlib-cygwin-0303
 #include DADAO-tch/Makefile.gcc-0902
