--- a/DADAO-tch/Makefile.gcc-0903
+++ b/DADAO-tch/Makefile.gcc-0903
@@ -11,7 +11,8 @@ GCC_0903_PATCHES	:= $(DIR_DADAO)/DADAO-tch/gcc-0903-patches
 
 GCC_0903_SOURCE		:= $(DIR_DADAO_SOURCE)/gcc-0903
 GCC_0903_BUILD		:= $(DIR_DADAO_BUILD)/gcc-0903
-GCC_0903_INSTALL	?= $(DIR_DADAO_BUILD)/__gcc-0903
+GCC_0903_INSTALL	?= $(DIR_DADAO_INSTALL)
+#GCC_0903_INSTALL	?= $(DIR_DADAO_BUILD)/__gcc-0903
 GCC_0903_LOG_STDOUT	:= $(DIR_DADAO)/_log-gcc-0903.out
 GCC_0903_LOG_STDERR	:= $(DIR_DADAO)/_log-gcc-0903.err
 
