--- a/DADAO-env/Makefile.DADAO-env
+++ b/DADAO-env/Makefile.DADAO-env
@@ -3,8 +3,8 @@
 #
 env-highfive:
 	@echo "=== BUILD Run-Time Environment BEGIN ==="
-	@LINUX_0503_INSTALL=$(DIR_DADAO_INSTALL) make -s linux-0503-highfive
-	@LINUX_0503_INSTALL=$(DIR_DADAO_INSTALL) make -s linux-0503-headers-highfive
+	@make -s linux-0503-highfive
+	@make -s linux-0503-headers-highfive
 	@echo "=== BUILD Run-Time Environment DONE! ==="
 
 LINUX_0503_ORIGIN	:= /pub/GIT-TAO/linux.git
@@ -18,7 +18,8 @@ LINUX_0503_PATCHES	:= $(DIR_DADAO)/DADAO-env/linux-0503-patches
 
 LINUX_0503_SOURCE	:= $(DIR_DADAO_SOURCE)/linux-0503
 LINUX_0503_BUILD	:= $(DIR_DADAO_BUILD)/linux-0503
-LINUX_0503_INSTALL	?= $(DIR_DADAO_BUILD)/__linux-0503
+LINUX_0503_INSTALL	?= $(DIR_DADAO_INSTALL)
+#LINUX_0503_INSTALL	?= $(DIR_DADAO_BUILD)/__linux-0503
 LINUX_0503_LOG_STDOUT	:= $(DIR_DADAO)/_log-linux-0503.out
 LINUX_0503_LOG_STDERR	:= $(DIR_DADAO)/_log-linux-0503.err
 
