--- a/ENV-linux/Makefile.linux-0503
+++ b/ENV-linux/Makefile.linux-0503
@@ -14,8 +14,8 @@ LINUX_0503_SOURCE	:= $(DIR_DADAO_SOURCE)/linux-0503
 LINUX_0503_BUILD	:= $(DIR_DADAO_BUILD)/linux-0503
 LINUX_0503_INSTALL	?= $(DIR_DADAO_INSTALL)
 #LINUX_0503_INSTALL	?= $(DIR_DADAO_BUILD)/__linux-0503
-LINUX_0503_LOG_STDOUT	:= $(DIR_DADAO)/_log-linux-0503.out
-LINUX_0503_LOG_STDERR	:= $(DIR_DADAO)/_log-linux-0503.err
+LINUX_0503_LOG_STDOUT	:= $(DIR_DADAO_LOG)/linux-0503.out
+LINUX_0503_LOG_STDERR	:= $(DIR_DADAO_LOG)/linux-0503.err
 
 linux-0503-clean:
 	@echo "Remove old linux source dir ..."
@@ -67,6 +67,7 @@ linux-0503-install:
 linux-0503-highfive:
 	@echo "BEGIN TO BUILD linux-0503!"
 	@echo "0. Remove old logfiles"
+	@test -d $(DIR_DADAO_LOG) || mkdir -p $(DIR_DADAO_LOG)
 	@rm -fr $(LINUX_0503_LOG_STDOUT) $(LINUX_0503_LOG_STDERR)
 	@echo "1. Clean old linux ..."
 	@make -s linux-0503-clean				1>> $(LINUX_0503_LOG_STDOUT) 2>> $(LINUX_0503_LOG_STDERR)
