--- a/TCH-gcc/Makefile.gcc-0902
+++ b/TCH-gcc/Makefile.gcc-0902
@@ -12,8 +12,8 @@ GCC_0902_PATCHES	:= $(DIR_DADAO)/TCH-gcc/gcc-0902-patches
 GCC_0902_SOURCE		:= $(DIR_DADAO_SOURCE)/gcc-0902
 GCC_0902_BUILD		:= $(DIR_DADAO_BUILD)/gcc-0902
 GCC_0902_INSTALL	?= $(DIR_DADAO_BUILD)/__gcc-0902
-GCC_0902_LOG_STDOUT	:= $(DIR_DADAO)/_log-gcc-0902.out
-GCC_0902_LOG_STDERR	:= $(DIR_DADAO)/_log-gcc-0902.err
+GCC_0902_LOG_STDOUT	:= $(DIR_DADAO_LOG)/gcc-0902.out
+GCC_0902_LOG_STDERR	:= $(DIR_DADAO_LOG)/gcc-0902.err
 
 gcc-0902-clean:
 	@echo "Remove old gcc source dir ..."
@@ -62,6 +62,7 @@ gcc-0902-install:
 gcc-0902-highfive:
 	@echo "BEGIN TO BUILD gcc-0902!"
 	@echo "0. Remove old gcc logfiles"
+	@test -d $(DIR_DADAO_LOG) || mkdir -p $(DIR_DADAO_LOG)
 	@rm -fr $(GCC_0902_LOG_STDOUT) $(GCC_0902_LOG_STDERR)
 	@echo "1. Clean old gcc ..."
 	@make -s gcc-0902-clean				1>> $(GCC_0902_LOG_STDOUT) 2>> $(GCC_0902_LOG_STDERR)
