--- a/TCH-newlib-cygwin/Makefile.newlib-cygwin-0303
+++ b/TCH-newlib-cygwin/Makefile.newlib-cygwin-0303
@@ -12,8 +12,8 @@ NEWLIB_CYGWIN_0303_PATCHES	:= $(DIR_DADAO)/TCH-newlib-cygwin/newlib-cygwin-0303-
 NEWLIB_CYGWIN_0303_SOURCE	:= $(DIR_DADAO_SOURCE)/newlib-cygwin-0303
 NEWLIB_CYGWIN_0303_BUILD	:= $(DIR_DADAO_BUILD)/newlib-cygwin-0303
 NEWLIB_CYGWIN_0303_INSTALL	?= $(DIR_DADAO_BUILD)/__newlib-cygwin-0303
-NEWLIB_CYGWIN_0303_LOG_STDOUT	:= $(DIR_DADAO)/_log-newlib-cygwin-0303.out
-NEWLIB_CYGWIN_0303_LOG_STDERR	:= $(DIR_DADAO)/_log-newlib-cygwin-0303.err
+NEWLIB_CYGWIN_0303_LOG_STDOUT	:= $(DIR_DADAO_LOG)/newlib-cygwin-0303.out
+NEWLIB_CYGWIN_0303_LOG_STDERR	:= $(DIR_DADAO_LOG)/newlib-cygwin-0303.err
 
 newlib-cygwin-0303-clean:
 	@echo "Remove old newlib-cygwin source dir ..."
@@ -50,6 +50,7 @@ newlib-cygwin-0303-install:
 newlib-cygwin-0303-highfive:
 	@echo "BEGIN TO BUILD newlib-cygwin-0303!"
 	@echo "0. Remove old newlib-cygwin logfiles"
+	@test -d $(DIR_DADAO_LOG) || mkdir -p $(DIR_DADAO_LOG)
 	@rm -fr $(NEWLIB_CYGWIN_0303_LOG_STDOUT) $(NEWLIB_CYGWIN_0303_LOG_STDERR)
 	@echo "1. Clean old newlib-cygwin ..."
 	@make -s newlib-cygwin-0303-clean			1>> $(NEWLIB_CYGWIN_0303_LOG_STDOUT) 2>> $(NEWLIB_CYGWIN_0303_LOG_STDERR)
