--- a/TCH-newlib-cygwin/Makefile.newlib-cygwin-0303
+++ b/TCH-newlib-cygwin/Makefile.newlib-cygwin-0303
@@ -43,19 +43,25 @@ newlib-cygwin-0303-source:
 		git commit -sm"DADAO-include: add header files"
 	@echo "INCLUDE: Apply include related patches ..."
 	@cd $(NEWLIB_CYGWIN_0303_SOURCE); git am $(NEWLIB_CYGWIN_0303_PATCHES)/0*.patch
-	# newlib/libc/sys
-	@echo "NEWLIB-LIBC-SYS: Copy newlib/libc/sys dir"
-	@cp -a $(NEWLIB_CYGWIN_0303_NEWFILES)/newlib/libc/sys/* $(NEWLIB_CYGWIN_0303_SOURCE)/newlib/libc/sys
+	# newlib/libc/sys/dadao
+	@echo "NEWLIB-LIBC-SYS-DADAO: Copy newlib/libc/sys/dadao dir"
+	@cp -a $(NEWLIB_CYGWIN_0303_NEWFILES)/newlib/libc/sys/dadao $(NEWLIB_CYGWIN_0303_SOURCE)/newlib/libc/sys
 	@cd $(NEWLIB_CYGWIN_0303_SOURCE);					\
-		git add newlib/libc/sys;					\
-		git commit -sm"DADAO-newlib-libc-sys: add dadao support"
+		git add newlib/libc/sys/dadao;					\
+		git commit -sm"DADAO-newlib-libc-sys-dadao: add dadao support"
+	@echo "NEWLIB-LIBC-SYS-DADAO: re-generate configure"
+	@cd $(NEWLIB_CYGWIN_0303_SOURCE)/newlib/libc/sys/dadao;			\
+		autoconf2.64;							\
+		git add .;							\
+		git commit -sm"DADAO-newlib-libc-sys-dadao: re-generate configure"
+	# newlib/libc/sys
 	@echo "NEWLIB-LIBC-SYS: Apply config related patches ..."
 	@cd $(NEWLIB_CYGWIN_0303_SOURCE); git am $(NEWLIB_CYGWIN_0303_PATCHES)/1*.patch
-#	@echo "NEWLIB-LIBC-SYS: re-generate configure and Makefile"
-#	@cd $(NEWLIB_CYGWIN_0303_SOURCE)/newlib/libc/sys/dadao;			\
-#		AUTOMAKE=/usr/bin/automake-1.11 ACLOCAL=/usr/bin/aclocal-1.11 autoreconf2.64;							\
-#		git add .;							\
-#		git commit -sm"DADAO-newlib-libc-sys: re-generate configure and Makefile"
+	@echo "NEWLIB-LIBC-SYS: re-generate configure"
+	@cd $(NEWLIB_CYGWIN_0303_SOURCE)/newlib/libc/sys;			\
+		autoconf2.64;							\
+		git add .;							\
+		git commit -sm"DADAO-newlib-libc-sys: re-generate configure"
 	# newlib
 	@echo "NEWLIB: Apply config related patches ..."
 	@cd $(NEWLIB_CYGWIN_0303_SOURCE); git am $(NEWLIB_CYGWIN_0303_PATCHES)/2*.patch
