TCH-bin: add --exclude=testsuite to binutils-gdb-0233-tags
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/TCH-binutils-gdb/Makefile.binutils-gdb-0233
+++ b/TCH-binutils-gdb/Makefile.binutils-gdb-0233
@@ -160,7 +160,7 @@ binutils-gdb-0233-TAGS:
 
 binutils-gdb-0233-tags:
 	@cd $(BINUTILS_GDB_0233_SOURCE) &&				\
-		ctags --recurse --languages=C,C++			\
+		ctags --recurse --exclude=testsuite --languages=C,C++	\
 			./bfd ./binutils				\
 			./gas ./gprof					\
 			./include ./intl				\
