--- a/TCH-gcc/Makefile.gcc-0903
+++ b/TCH-gcc/Makefile.gcc-0903
@@ -108,3 +108,14 @@ gcc-0903-check:
 	@echo "MUST build/install binutils/gcc in the same dir (use tch-highfive)"
 	@make -C $(GCC_0903_BUILD) check-gcc-c		1>> $(GCC_0903_LOG_STDOUT) 2>> $(GCC_0903_LOG_STDERR)
 	@ln --symbolic -t $(GCC_0903_BUILD) $(GCC_0903_BUILD)/gcc/testsuite/gcc/gcc.sum
+
+gcc-0903-tags:
+	@cd $(GCC_0903_SOURCE) &&							\
+		ctags --recurse --exclude=testsuite --languages=C,C++			\
+			./fixincludes							\
+			./gcc								\
+			./include ./intl						\
+			./libbacktrace ./libcc1 ./libcpp ./libdecnumber ./libiberty	\
+			./libgcc ./libquadmath						\
+			./lto-plugin							\
+			./zlib
